[project]
name = "rag-pipeline-visualizer"
version = "1.0.0"
description = "Interactive RAG Embedding Visualizer - Visualize text embeddings and understand how RAG systems work"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.28.0",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.15",
    "plotly>=5.17.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.4",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "langchain-core>=1.2.8",
    "langchain-text-splitters>=1.1.0",
]
